src/test/deca/context/invalid/class/surcharge/from_self.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Already defined

class A {
	void m(int a) {}
	void m() {}
}

{

}

